[package]
name = "amm-sdk-netsblox"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/amm-sdk-netsblox"
documentation = "https://docs.rs/amm-sdk-netsblox"
description = "Converts amm_sdk compositions into NetsBlox projects"

[dependencies]
amm_sdk = "0.4.0"
clap = { version = "4.5.20", features = ["derive"] }
